--- a/BitEngine/style6.css
+++ b/BitEngine/style6.css
@@ -1,4 +1,5 @@
 
+
 body {
     font-family: "Montserrat";
     text-align: center;
@@ -64,13 +65,111 @@ body {
     font-family: "Montserrat-Light";
   }
   .background {
-    padding-top: 6rem;
+    padding-top: 1rem;
     display: inline-block;
-    height:90vh;
+    height:105vh;
     width: 100%;
     background: linear-gradient(60deg, rgba(19, 186, 189, 0.5), rgba(0, 91, 133, 0.7)), url('bglogin.png') center;
-  }
-  .container {
-    margin-top: 50px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
   }
+  .profile-card {
+    width: 300px;
+    height: 400px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: grid;
+    place-items: center;
+    background: url('propic.png')
+      no-repeat center center/cover;
+    position: relative;
+    transition: all 1s;
+    z-index: 1;
+    overflow: hidden;
+  }
+  
+  .info h2,
+  .info p {
+    color: #fff;
+    opacity: 0;
+    transition: all 0.6s;
+  }
+  
+  .profile-card:hover .info h2,
+  .profile-card:hover .info p {
+    opacity: 1;
+    line-height: 1;
+
+
+  }
+  
+  .info::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(1, 30, 64, 0.5);
+    transform: skew(30deg) translateX(100%);
+    opacity: 0.3;
+    z-index: -1;
+    transition: all 0.6s ease;
+  }
+  .info::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(1, 30, 64, 0.5);
+    transform: skew(-30deg) translateX(100%);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+    opacity: 0.3;
+    z-index: -1;
+    transition: all 0.6s ease;
+  }
+  
+  .profile-card:hover .info::before {
+    transform: skew(30deg) translateX(50%);
+  }
+  
+  .profile-card:hover .info::after {
+    transform: skew(-30deg) translateX(40%);
+    opacity: 0.7;
+  }
+  .profile-card::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(1, 30, 64, 0.5);
+    opacity: 0.3;
+    transform: skew(30deg) translateX(85%);
+    transition: all 0.6s ease;
+    z-index: -1;
+  }
+  
+  .profile-card::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(1, 30, 64, 0.5);
+    opacity: 0.3;
+    transform: skew(-30deg) translateX(85%);
+    transition: all 0.6s ease;
+    z-index: -1;
+  }
+  .profile-card:hover:before {
+    transform: skew(30deg) translateX(30%);
+  }
+  .profile-card:hover:after {
+    transform: skew(-30deg) translateX(20%);
+  }
+  
